samples/_failures_safe/1761502677_c7e6e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4c4e3b2.c: In function ‘main’:
./samples/SAFE/__tmp_c4c4e3b2.c:140:5: error: expected declaration or statement at end of input
  140 |     mat1.rows = read_int("  Rows (1-10): ", 1, MAX_SIZE);
      |     ^~~~
